Alignment fix for first column of Column's Footnotes

--- a/app/styles/slide.scss
+++ b/app/styles/slide.scss
@@ -93,7 +93,7 @@
 		-webkit-column-break-inside: avoid;
 	    column-break-inside: avoid;	
     }
-    p:first-child {margin-top:0;}
+    p:first-child, h6:first-child {margin-top:0;}
 }
 
 .slide-video-content {
